Separate package list and add show package dependency tree
Details:

* This change separates the display of the installed packages into separate
  GitHub Actions steps for finding them more easily in a log, and it adds
  showing the package dependency tree bvia pipdeptree.

Signed-off-by: Andreas Maier <maiera@de.ibm.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -116,6 +116,10 @@ jobs:
         PACKAGE_LEVEL: ${{ matrix.package_level }}
       run: |
         make install
+    - name: Show installed package versions
+      env:
+        PACKAGE_LEVEL: ${{ matrix.package_level }}
+      run: |
         echo "Installed Python packages:"
         pip list
     - name: Development setup
@@ -123,8 +127,18 @@ jobs:
         PACKAGE_LEVEL: ${{ matrix.package_level }}
       run: |
         make develop
+    - name: Show installed package versions
+      env:
+        PACKAGE_LEVEL: ${{ matrix.package_level }}
+      run: |
         echo "Installed Python packages:"
         pip list
+    - name: Show package dependency tree
+      env:
+        PACKAGE_LEVEL: ${{ matrix.package_level }}
+      run: |
+        echo "Package dependency tree of installed Python packages:"
+        pipdeptree --all
     - name: Run build
       env:
         PACKAGE_LEVEL: ${{ matrix.package_level }}
