Added macos/3.9/minimum, removed windows/3.8/minimum to GitHub test workflow
Signed-off-by: Andreas Maier <maiera@de.ibm.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -63,12 +63,12 @@ jobs:
               { \
                 \"os\": \"macos-latest\", \
                 \"python-version\": \"3.9\", \
-                \"package_level\": \"latest\" \
+                \"package_level\": \"minimum\" \
               }, \
               { \
-                \"os\": \"windows-latest\", \
-                \"python-version\": \"3.8\", \
-                \"package_level\": \"minimum\" \
+                \"os\": \"macos-latest\", \
+                \"python-version\": \"3.9\", \
+                \"package_level\": \"latest\" \
               }, \
               { \
                 \"os\": \"windows-latest\", \
