--- a/tox.ini
+++ b/tox.ini
@@ -31,8 +31,6 @@ envlist =
     cygwin64_py37
     cygwin64_py38
 
-# For Appveyor, missing interpreters should fail. For local use, you may
-# want to allow to skip missing interpreters.
 skip_missing_interpreters = false
 
 skipsdist = true
@@ -41,7 +39,6 @@ skipsdist = true
 skip_install = true
 passenv =
     ProgramFiles
-    APPVEYOR
     USER
     LNAME
     USERNAME
@@ -104,8 +101,8 @@ basepython = python3.7
 platform = linux2|darwin
 basepython = python3.8
 
-# Note: The basepython file paths for the win64* tox environments are set for
-#       Appveyor CI.
+# Note: The basepython file paths for the win64* tox environments may need to
+#       be customized.
 
 [testenv:win64_py27_32]
 platform = win32
@@ -155,8 +152,7 @@ basepython = C:\Python38\python.exe
 platform = win32
 basepython = C:\Python38-x64\python.exe
 
-# Note: The 32-bit versions of CygWin do not work and have been removed from
-# appveyor.yml and tox.ini:
+# Note: The 32-bit versions of CygWin do not work:
 # - Python 2.7 with cygwin 32-bit fails with "virtualenv is not compatible with
 #   this system or executable".
 # - On Python 3.6 and upwards, Tox returns success but does not do anything.
